test_scores/negative_dimers/features/Q13064.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q13064.pkl.xz